--- a/inde.html
+++ b/inde.html
@@ -5,13 +5,215 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/main.js" defer></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/main.css">
     <title>Act+Care</title>
 </head>
 
 <body>
+    <nav>
+        <div class="fixed-nav">
+            <div class="logo">
+                <p>logo</p>
+            </div>
+            <input type="checkbox" class="toggle-menu">
+            <div class="burg">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-search-phone" viewBox="0 0 16 16">
+                    <path
+                        d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+                </svg>
+                <div class="burger"></div>
+            </div>
+            <ul class="menu">
+                <li><a href="#advantages">Shop</a></li>
+                <li><a href="#product">Science</a></li>
+                <li><a href="#team">Press</a></li>
+                <li><a href=""> Blogs</a>
+                <li><a href=""> Tutorials</a>
+            </ul>
+            <div class="icons">
+                <div id="shopping-cart-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                        class="bi bi-basket3" viewBox="0 0 16 16">
+                        <path
+                            d="M5.757 1.071a.5.5 0 0 1 .172.686L3.383 6h9.234L10.07 1.757a.5.5 0 1 1 .858-.514L13.783 6H15.5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H.5a.5.5 0 0 1-.5-.5v-1A.5.5 0 0 1 .5 6h1.717L5.07 1.243a.5.5 0 0 1 .686-.172zM3.394 15l-1.48-6h-.97l1.525 6.426a.75.75 0 0 0 .729.574h9.606a.75.75 0 0 0 .73-.574L15.056 9h-.972l-1.479 6h-9.21z" />
+                    </svg>
+                </div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                    class="bi bi-person-fill" viewBox="0 0 16 16">
+                    <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
+                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                    class="bi bi-search-desktop" viewBox="0 0 16 16">
+                    <path
+                        d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+                </svg>
+            </div>
 
+        </div>
+    </nav>
+    <main>
+
+        <div class="product-page">
+            <img class="product-image" src="/src/assets/images/cream-background.png" alt="Product image">
+            <div class="product-details-container">
+                <div class="product-path">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="25" fill="currentColor"
+                        class="bi bi-arrow-left" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z" />
+                    </svg>
+                    <div class="links">
+                        <a href="">ALL PRODUCTS /</a>
+                        <a href="">SOMETHING /</a>
+                        <a href="">SOMETHING ELSE</a>
+                    </div>
+                </div>
+                <div class="product-details">
+                    <img class="product-image-s" src="/src/assets/images/cream-background.png" alt="Product image">
+
+                    <h2>RESTORATIVE HAIR MASK</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Tempor commodo ullamcorper a lacus vestibulum. Luctus accumsan tortor
+                        posuere ac ut.</p>
+                    <div class="grid">
+                        <div class="grid-item">
+                            <span>🍷</span>
+                            <p>100% ORGANIC</p>
+                        </div>
+                        <div class="grid-item">
+                            <span>🍷</span>
+                            <p>100% ORGANIC</p>
+                        </div>
+                        <div class="grid-item">
+                            <span>🍷</span>
+                            <p>100% ORGANIC</p>
+                        </div>
+                        <div class="grid-item">
+                            <span>🍷</span>
+                            <p>100% ORGANIC</p>
+                        </div>
+                    </div>
+                    <div class="buy-option">
+                        <label>
+                            <input type="radio" name="option" checked>
+                            Buy Once | $38
+                        </label>
+                        <br>
+                        <label>
+                            <input type="radio" name="option">
+                            Subscribe (SAVE 20%) | <span>$30</span>
+                        </label>
+                    </div>
+                    <div class="add-cart">
+                        <div class="quantity-box">
+                            <button type="button" class="quantity-button">-</button>
+                            <input type="text" class="quantity-input" value="1">
+                            <button type="button" class="quantity-button">+</button>
+                        </div>
+                        <button type="submit" id="add-to-cart">ADD TO CART</button>
+                    </div>
+                </div>
+            </div>
+            <div class="product-info">
+                <div class="ingredients">
+                    <div>
+                        <span>Ingredients</span>
+                        <i class="plus-icon fas fa-plus"></i>
+                    </div>
+
+                    <p class="hidden">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt
+                        ligula
+                        non
+                        ex pretium, eget condimentum turpis dictum. Nam ullamcorper justo non pretium ultricies. Duis in
+                        diam
+                        nec orci viverra aliquet. Nunc auctor, lacus at scelerisque fermentum, urna diam ornare dolor,
+                        sed
+                        fermentum tellus felis at justo.</p>
+                </div>
+                <div class="ingredients">
+                    <div>
+                        <span>Ingredients</span>
+                        <i class="plus-icon fas fa-plus"></i>
+                    </div>
+
+                    <p class="hidden">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt
+                        ligula
+                        non
+                        ex pretium, eget condimentum turpis dictum. Nam ullamcorper justo non pretium ultricies. Duis in
+                        diam
+                        nec orci viverra aliquet. Nunc auctor, lacus at scelerisque fermentum, urna diam ornare dolor,
+                        sed
+                        fermentum tellus felis at justo.</p>
+                </div>
+                <div class="ingredients">
+                    <div>
+                        <span>Ingredients</span>
+                        <i class="plus-icon fas fa-plus"></i>
+                    </div>
+
+                    <p class="hidden">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt
+                        ligula
+                        non
+                        ex pretium, eget condimentum turpis dictum. Nam ullamcorper justo non pretium ultricies. Duis in
+                        diam
+                        nec orci viverra aliquet. Nunc auctor, lacus at scelerisque fermentum, urna diam ornare dolor,
+                        sed
+                        fermentum tellus felis at justo.</p>
+                </div>
+            </div>
+
+        </div>
+        <div class="recomended-section">
+            <h3>YOU MAY ALSO LIKE</h3>
+            <div id="slider">
+                <div class="arrow left">&#10094;</div>
+                <div class="product-list">
+                    <div class="product">
+                        <img src="/src/assets/images/face-cream.png" alt="Product 1">
+                        <h4>Hand cream/something1</h4>
+                        <p>this is very cool product</p>
+                        <p>$50.00</p>
+                    </div>
+                    <div class="product">
+                        <img src="/src/assets/images/face-cream.png" alt="Product 2">
+                        <h4>Hand cream/something2</h4>
+                        <p>this is very cool product</p>
+                        <p>$100.00</p>
+                    </div>
+                    <div class="product">
+                        <img src="/src/assets/images/face-cream.png" alt="Product 3">
+                        <h4>Hand cream/something3</h4>
+                        <p>this is very cool product</p>
+                        <p>$150.00</p>
+                    </div>
+                    <div class="product">
+                        <img src="/src/assets/images/face-cream.png" alt="Product 4">
+                        <h4>Hand cream/something4</h4>
+                        <p>this is very cool product</p>
+                        <p>$200.00</p>
+                    </div>
+                    <div class="product">
+                        <img src="/src/assets/images/face-cream.png" alt="Product 5">
+                        <h4>Hand cream/something5</h4>
+                        <p>this is very cool product</p>
+                        <p>$250.00</p>
+                    </div>
+                </div>
+                <div class="arrow right">&#10095;</div>
+            </div>
+        </div>
+    </main>
+    <script src="/js/main.js"></script>
 </body>
 
 </html>
