--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <main>
 
         <div class="product-page">
-            <img class="product-image" src="/src/assets/images/cream-background.png" alt="Product image">
+            <img class="product-image" src="./src/assets/images/cream-background.png" alt="Product image">
             <div class="product-details-container">
                 <div class="product-path">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="25" fill="currentColor"
@@ -78,7 +78,7 @@
                     </div>
                 </div>
                 <div class="product-details">
-                    <img class="product-image-s" src="/src/assets/images/cream-background.png" alt="Product image">
+                    <img class="product-image-s" src="./src/assets/images/cream-background.png" alt="Product image">
 
                     <h2>RESTORATIVE HAIR MASK</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
@@ -179,31 +179,31 @@
                 <div class="arrow left">&#10094;</div>
                 <div class="product-list">
                     <div class="product">
-                        <img src="/src/assets/images/face-cream.png" alt="Product 1">
+                        <img src="./src/assets/images/face-cream.png" alt="Product 1">
                         <h4>Hand cream/something1</h4>
                         <p>this is very cool product</p>
                         <p>$50.00</p>
                     </div>
                     <div class="product">
-                        <img src="/src/assets/images/face-cream.png" alt="Product 2">
+                        <img src="./src/assets/images/face-cream.png" alt="Product 2">
                         <h4>Hand cream/something2</h4>
                         <p>this is very cool product</p>
                         <p>$100.00</p>
                     </div>
                     <div class="product">
-                        <img src="/src/assets/images/face-cream.png" alt="Product 3">
+                        <img src="./src/assets/images/face-cream.png" alt="Product 3">
                         <h4>Hand cream/something3</h4>
                         <p>this is very cool product</p>
                         <p>$150.00</p>
                     </div>
                     <div class="product">
-                        <img src="/src/assets/images/face-cream.png" alt="Product 4">
+                        <img src="./src/assets/images/face-cream.png" alt="Product 4">
                         <h4>Hand cream/something4</h4>
                         <p>this is very cool product</p>
                         <p>$200.00</p>
                     </div>
                     <div class="product">
-                        <img src="/src/assets/images/face-cream.png" alt="Product 5">
+                        <img src="./src/assets/images/face-cream.png" alt="Product 5">
                         <h4>Hand cream/something5</h4>
                         <p>this is very cool product</p>
                         <p>$250.00</p>
